--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint --dir src"
   },
   "dependencies": {
-    "@tailwindcss/jit": "^0.1.18",
     "bcryptjs": "^2.4.3",
+    "leaflet": "^1.9.4",
     "mongodb": "^3.7.4",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
@@ -18,27 +18,29 @@
     "react": "18.2.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.10.1",
     "sass": "^1.89.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/node": "22.15.30",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.4.19",
     "eslint": "^7.30.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
-    "postcss": "^8.3.4",
+    "postcss": "^8.4.38",
     "prettier": "2.3.2",
-    "tailwindcss": "^2.1.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^4.3.4"
   }
 }
